Refactor LaTeX presentation structure and update references

--- a/generative-ai/diffusion/HairStep/main.tex
+++ b/generative-ai/diffusion/HairStep/main.tex
@@ -46,22 +46,7 @@
 % -------------------------------
 % Slide Content
 % -------------------------------
-\begin{frame}
-  \frametitle{This is the first slide}
-  \framesubtitle{A bit more information about this}
-  
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  
-  Here is:
-  \begin{enumerate}
-      \item Some text;
-      \item Inline maths: $\mathcal{R}_C(D)=\oplus_{n\geqslant0}\mathcal{L}(nD)$;
-      \item Display maths:
-      \[
-          \operatorname{Tor}_i(\operatorname{colim}_\alpha M_\alpha, N) = \operatorname{colim}_\alpha\operatorname{Tor}_i(M_\alpha, N)
-      \]
-  \end{enumerate}
-\end{frame}
+\include{slides/task-intro}
 
 
 \begin{frame}{Make Titles Informative}
