Add references to Soft Rasterizer and single-view hair modeling in bibliography

--- a/generative-ai/diffusion/HairStep/references.bib
+++ b/generative-ai/diffusion/HairStep/references.bib
@@ -41,3 +41,21 @@ year={2022}
   pages={1 - 12},
   url={https://api.semanticscholar.org/CorpusID:54101192}
 }
+
+@article{liu2019softras,
+  title={Soft Rasterizer: A Differentiable Renderer for Image-based 3D Reasoning},
+  author={Liu, Shichen and Li, Tianye and Chen, Weikai and Li, Hao},
+  journal={The IEEE International Conference on Computer Vision (ICCV)},
+  month = {Oct},
+  year={2019}
+}
+
+@article{Hu2015SingleviewHM,
+  title={Single-view hair modeling using a hairstyle database},
+  author={Liwen Hu and Chongyang Ma and Linjie Luo and Hao Li},
+  journal={ACM Transactions on Graphics (TOG)},
+  year={2015},
+  volume={34},
+  pages={1 - 9},
+  url={https://api.semanticscholar.org/CorpusID:18205814}
+}
