Add new related works section with HairNet, 3D Hair Synthesis, and NeuralHDHair

--- a/generative-ai/diffusion/HairStep/slides/related-works.tex
+++ b/generative-ai/diffusion/HairStep/slides/related-works.tex
@@ -1,4 +1,46 @@
-\begin{frame}
-    \frametitle{Related Works}
+\newSection{Related Works}
+
+\subsection{HairNet}
+\begin{frame}\frametitle{Related Works}
+    \framesubtitle{HairNet}
+
+    \normalsize{\textcolor{myBlue}{\textit{Single-View Hair Reconstruction using Convolutional Neural Networks}}}
     
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[width=0.8\linewidth]{assets/figures/baselines/HairNet.png}
+        \caption{Zhou et al. 2018\cite{Zhou2018SingleViewHR}}
+        \label{fig:hairnet}
+    \end{figure}
 \end{frame}
+
+
+\subsection{3D Hair Synthesis}
+\begin{frame}\frametitle{Related Works}
+    \framesubtitle{3D Hair Synthesis}
+
+    \normalsize{\textcolor{myBlue}{\textit{3D Hair Synthesis using Volumetric Variational Autoencoders}}}
+    
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[width=0.8\linewidth]{assets/figures/baselines/3DHairSynthesis.png}
+        \caption{Saito et al. 2018\cite{Saito20183DHS}}
+        \label{fig:3dhairsynthesis}
+    \end{figure}
+\end{frame}
+
+
+\subsection{NeuralHDHair}
+\begin{frame}\frametitle{Related Works}
+    \framesubtitle{NeuralHDHair}
+
+    \normalsize{\textcolor{myBlue}{\textit{NeuralHDHair: Automatic High-fidelity Hair Modeling from a Single Image Using Implicit Neural Representations}}}
+    
+    \begin{figure}[ht]
+        \centering
+        \includegraphics[width=0.8\linewidth]{assets/figures/baselines/NeuralHDHair.png}
+        \caption{Wu et al. 2022\cite{wu2022neuralhdhair}}
+        \label{fig:neuralhdhair}
+    \end{figure}
+\end{frame}
+
