Update slide title to reflect objective of single-view 3D hair modeling

--- a/generative-ai/diffusion/HairStep/slides/task-intro.tex
+++ b/generative-ai/diffusion/HairStep/slides/task-intro.tex
@@ -1,5 +1,6 @@
+\newSection{Objective}
 \begin{frame}
-    \frametitle{Domain: Single-view 3D Hair Modeling}
+    \frametitle{Objective: Single-view 3D Hair Modeling}
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.8\linewidth]{assets/figures/task-intro.png}
