Refactor LaTeX preamble for improved package organization and added new packages

--- a/generative-ai/diffusion/HairStep/config/preamble.tex
+++ b/generative-ai/diffusion/HairStep/config/preamble.tex
@@ -6,31 +6,42 @@
 % -------------------------------
 % Package Imports
 % -------------------------------
-\usepackage{graphicx}    % For including graphics
-\usepackage{xcolor}
-\usepackage{tikz}
-
-\usepackage[utf8]{inputenc}
-\usepackage[english]{babel}
-\usepackage{amsmath}     % For math symbols and environments
-\usepackage{amssymb}     % For additional math symbols
-\usepackage{amsfonts}    % For math fonts
-\usepackage{amsthm}      % For theorem environments
-\usepackage{caption}     % Caption customization
-\usepackage{bookmark}             % PDF bookmarks
-\usepackage{cleveref}             % Clever referencing for improved cross-references
+\usepackage[utf8]{inputenc}        % UTF-8 encoding
+\usepackage[english]{babel}        % English language support
+\usepackage{amsmath}               % For math symbols and environments
+\usepackage{amssymb}               % For additional math symbols
+\usepackage{amsfonts}              % For math fonts
+\usepackage{amsthm}                % For theorem environments
+\usepackage{graphicx}              % For including graphics
+\usepackage{xcolor}                % Colored elements and tables
+\usepackage{tikz}                  % For creating graphics programmatically
+\usepackage{eso-pic}               % Background images
+\usepackage{float}                 % Precise float positioning
+\usepackage{epstopdf}              % EPS to PDF conversion
+\usepackage{array}                 % Column width definition
+\usepackage{booktabs}              % Professional horizontal lines
+\usepackage{caption}               % Caption customization
+\usepackage{colortbl}              % Colored tables
+\usepackage{longtable}             % Tables that can span multiple pages
+\usepackage{makecell}              % Customized cell formatting
+\usepackage{tabularx}              % Flexible-width tables
+\usepackage{bookmark}              % PDF bookmarks
+\usepackage{hyperref}              % For hyperlinks
+\usepackage{cleveref}              % Clever referencing for improved cross-references
 
 \usepackage[
     backend=biber,
     style=ieee,
-]{biblatex}
-\addbibresource{references.bib}
-\usepackage{hyperref}    % For hyperlinks
+]{biblatex}                        % Bibliography management
+\addbibresource{references.bib}    % Bibliography file
 
 % -------------------------------
 % Color and Theme Customization
 % -------------------------------
 \definecolor{myBlue}{RGB}{0,33,71}
+\definecolor{myLightBlue}{cmyk}{0.05,0.01,0,0.02}
+\definecolor{myDarkBlue}{RGB}{0, 0, 102}
+
 \usecolortheme[named=myBlue]{structure}
 
 % Remove navigation symbols
@@ -67,5 +78,4 @@
 
 % ---- Caption Colors ----
 \captionsetup[figure]{labelformat=empty} % Set figure caption label color
-\captionsetup[table]{labelfont={color=myBlue}}  % Set table caption label color
-
+\captionsetup[table]{labelformat=empty}  % Set table caption label color
