Update motivation slide to improve visualization formatting

--- a/generative-ai/diffusion/HairStep/slides/motivation.tex
+++ b/generative-ai/diffusion/HairStep/slides/motivation.tex
@@ -35,8 +35,8 @@
 \end{frame}
 
 %---------------------------------------------------------
-\begin{frame}[t]{Motivation -- Visualization}
-    \begin{figure}[t]
+\begin{frame}{Motivation -- Visualization}
+    \begin{figure}
         \centering
         \includegraphics[width=0.9\linewidth]{assets/figures/motivations/orientation-map.png}
         \caption{Example of a 2D orientation map used in existing solutions.}
