Improve clarity and consistency in method slide text and captions

--- a/generative-ai/diffusion/HairStep/slides/method.tex
+++ b/generative-ai/diffusion/HairStep/slides/method.tex
@@ -116,12 +116,12 @@
         \item \textbf{Annotation Process:}
         \begin{itemize}
             \item Artists draw directional vector curves from the hair roots to the hair ends.
-            \item Vector strokes are colored by the definition of \ref{eq:strand_map}.
+            \item Vector strokes are colored by the definition of Eq.~\ref{eq:strand_map}.
             \item Colored strokes are interpolated to form the strand map.
         \end{itemize}
         \item \textbf{Statistics:}
         \begin{itemize}
-            \item On average, 300 strokes per portrait.
+            \item On average, 300 strokes per portrait is annotated.
         \end{itemize}
     \end{itemize}
 \end{frame}
@@ -131,7 +131,7 @@
     \begin{figure}[t]
         \centering
         \includegraphics[width=0.95\textwidth]{assets/figures/method/hisa/hisa.png}
-        \caption{Obtaining strand maps from vector strokes: 
+        \caption{Strand maps extraction steps:
         (a) Portrait image, (b) Annotated vector strokes, (c) Colored strokes, (d) Strand map.}
         \label{fig:hisa}
     \end{figure}
