Add conclusion slide to main presentation

--- a/generative-ai/diffusion/HairStep/main.tex
+++ b/generative-ai/diffusion/HairStep/main.tex
@@ -5,9 +5,8 @@
 \input{config/frame-settings}
 \input{config/commands.tex}
 
-\input{config/variables.tex}
-
 \input{slides/titlepage}
+
 
 
 % Metadata
@@ -56,6 +55,7 @@
 
 \include{slides/experiments}
 
+\include{slides/conclusion}
 
 \include{slides/reference}
 
