Update conclusion.tex to use emph for key terms in contributions

--- a/generative-ai/diffusion/HairStep/slides/conclusion.tex
+++ b/generative-ai/diffusion/HairStep/slides/conclusion.tex
@@ -4,9 +4,9 @@
     \frametitle{Conclusion}
     \textbf{Contributions:}
     \begin{itemize}
-        \item Introduced \textit{HairStep}, a novel intermediate representation combining strand and depth maps.
-        \item Collected new datasets \textit{HiSa} and \textit{HiDa} with annotated real images.
-        \item Proposed two quantitative metrics: \textit{HairSale} and \textit{HairRida}.
+        \item Proposed \emph{HairStep}, a novel intermediate representation combining strand and depth maps.
+        \item Collected new datasets \emph{HiSa} and \emph{HiDa} with annotated real images.
+        \item Proposed two quantitative metrics: \emph{HairSale} and \emph{HairRida}.
         \item Achieved state-of-the-art performance in single-view 3D hair modeling.
     \end{itemize}
     \vspace{1em}
