Add section numbering to table of contents in slides

--- a/generative-ai/diffusion/HairStep/slides/contents.tex
+++ b/generative-ai/diffusion/HairStep/slides/contents.tex
@@ -1,3 +1,4 @@
 \begin{frame}[t]{Outline}
+    \setbeamertemplate{section in toc}[sections numbered]
     \tableofcontents[hideallsubsections]
 \end{frame}
