--- a/generative-ai/diffusion/HairStep/slides/contribution.tex
+++ b/generative-ai/diffusion/HairStep/slides/contribution.tex
@@ -2,10 +2,10 @@
 
 \begin{frame}[t]{Contribution}
     \begin{itemize}
-        \item Proposed \textit{HairStep}, a novel intermediate representation combining strand maps and depth maps for 3D hair reconstruction.
+        \item Proposed \emph{HairStep}, a novel intermediate representation combining strand maps and depth maps for 3D hair reconstruction.
         \item Developed a weakly-supervised domain adaptation method for depth estimation using synthetic priors and real-world sparse annotations.
-        \item Created \textit{HiSa} (strand annotations) and \textit{HiDa} (relative depth annotations) datasets for 1,250 real portrait images.
-        \item Introduced new metrics, \textit{HairSale} (strand alignment error) and \textit{HairRida} (relative depth accuracy), for quantitative evaluation of 3D hair modeling.
+        \item Created \emph{HiSa} (strand annotations) and \emph{HiDa} (relative depth annotations) datasets for 1,250 real portrait images.
+        \item Introduced new metrics, \emph{HairSale} (strand alignment error) and \emph{HairRida} (relative depth accuracy), for quantitative evaluation of 3D hair modeling.
         \item Achieved state-of-the-art performance in single-view 3D hair modeling.
     \end{itemize}
 \end{frame}
